--- a/Frontend/pages/Publisher/publisher-profile.html
+++ b/Frontend/pages/Publisher/publisher-profile.html
@@ -17,7 +17,7 @@
   <body>
     <div class="profile-card">
       <img
-        src="https://placehold.co/120x120/0d6efd/FFFFFF?text=LOGO"
+        src="https://placehold.co/120x120/e9ecef/6c757d?text=No+Logo"
         alt="Publisher Logo"
         class="profile-pic"
         id="profileImage"
