--- a/Frontend/pages/User/user-profile.html
+++ b/Frontend/pages/User/user-profile.html
@@ -18,7 +18,7 @@
     <div class="profile-card">
       <div class="profile-pic-container">
         <img
-          src="https://placehold.co/120x120/0d6efd/FFFFFF?text=JD"
+          src="https://placehold.co/120x120/e9ecef/6c757d?text=No+Image"
           alt="Profile"
           class="profile-pic"
           id="profileImage"
