--- a/Frontend/pages/Publisher/AI-generated-article.html
+++ b/Frontend/pages/Publisher/AI-generated-article.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Article Generator - BlogHub</title>
+    <title>BlogHub - AI Article Generator</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
