--- a/Frontend/pages/Publisher/buy-subscription.html
+++ b/Frontend/pages/Publisher/buy-subscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlogHub - AI Generator Subscription</title>
-    <link rel="icon" href="../../assets/image/blogging.png" />
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
 
     <!-- Bootstrap CSS -->
     <link
