--- a/Frontend/pages/User/user-profile.html
+++ b/Frontend/pages/User/user-profile.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile</title>
+    <title>BlogHub - User Profile</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
