--- a/Frontend/pages/login-and-register/forgot-password.html
+++ b/Frontend/pages/login-and-register/forgot-password.html
@@ -3,58 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forgot Password</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #f9f9f9;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .container {
-        background: #fff;
-        padding: 2rem;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-        width: 350px;
-      }
-      h2 {
-        text-align: center;
-      }
-      .form-step {
-        display: none;
-      }
-      .form-step.active {
-        display: block;
-      }
-      input {
-        width: 100%;
-        padding: 10px;
-        margin: 8px 0;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-      }
-      button {
-        width: 100%;
-        padding: 10px;
-        background: black;
-        color: white;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #333;
-      }
-      .info {
-        margin-top: 10px;
-        text-align: center;
-        font-size: 14px;
-        color: #555;
-      }
-    </style>
+    <title>BlogHub - Forgot Password</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
+    <link
+      rel="stylesheet"
+      href="/Frontend/css/login-and-register/forgot-password.css"
+    />
   </head>
   <body>
     <div class="container">
