--- a/Frontend/pages/login-and-register/login-and-register.html
+++ b/Frontend/pages/login-and-register/login-and-register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login & Register</title>
+    <title>BlogHub - Login & Register</title>
     <link rel="icon" href="/Frontend/assets/image/blogging.png" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
