--- a/Frontend/pages/Publisher/buy-subscription.html
+++ b/Frontend/pages/Publisher/buy-subscription.html
@@ -38,9 +38,7 @@
             <li>API Access</li>
           </ul>
         </div>
-        <a
-          href="http://localhost:5500/Frontend/pages/Publisher/payment.html"
-          class="btn-subscribe"
+        <a href="/Frontend/pages/Publisher/payment.html" class="btn-subscribe"
           >Buy Subscription Now</a
         >
         <a
@@ -118,7 +116,7 @@
               // Store the intended action in localStorage so we can redirect back after login
               localStorage.setItem("redirectAfterLogin", "subscription");
               window.location.href =
-                "http://localhost:5500/Frontend/pages/login-and-register/login-and-register.html";
+                "/Frontend/pages/login-and-register/login-and-register.html";
             }
           });
         } else if (userRole !== "PUBLISHER") {
@@ -134,7 +132,7 @@
             if (result.isConfirmed) {
               // Redirect to registration page with publisher role pre-selected
               window.location.href =
-                "http://localhost:5500/Frontend/pages/login-and-register/login-and-register.html?role=publisher";
+                "/Frontend/pages/login-and-register/login-and-register.html?role=publisher";
             }
           });
         } else {
