--- a/Frontend/pages/Publisher/payment.html
+++ b/Frontend/pages/Publisher/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlogHub - Payment</title>
-    <link rel="icon" href="/Frontend/assets/image/payment.png" />
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -99,8 +99,10 @@
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Payment JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    ></script>
+    <!-- Payment JavaScript -->
     <script src="/Frontend/JavaScript/Publisher/payment.js"></script>
   </body>
 </html>
